update delete customer api updated
